@@ -17,6 +17,8 @@ STELLA, CHANGES
 * FIXED: Testrun.id will be converted to a Gibbler::Digest if it's a String. 
 * CHANGE: Removed dashes from CLI params: notemplate, nostats, nowait, withheader, withparam
 * CHANGE: Engine is now called via Testrun#run
+* CHANGE: Use the ID attribute (e.g. Testplan.id) instead of digest or digest_cache (which only
+  be used once to generate an ID 
 * ADDED: Testrun#client_options
 * ADDED: Reconstituting Stella::Testrun and Stella::Testplan objects from JSON/Hash
 * ADDED: Testrun objects are now frozen after the run
